style(css): increase width of scrollbar in webkit to 7px fix(config.json): change server url to http://localhost:5000/api/ fix(config.json): change client url to http://localhost:3000/ fix(book_detail.js): change server url to http://localhost:5000/api/ feat(book_detail.js): add href to bookmark button fix(book_reader.js): change server url to http://localhost:5000/api/ feat(book_reader.js): add support for saving scroll position in local storage feat(book_reader.js): add support for saving book data in local storage fix(BookController.js): add thumb to response in read function

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -142,7 +142,6 @@
     position: absolute;
 }
 
-
 .galleriesThumb {
     display: block;
     position: relative;
@@ -150,7 +149,6 @@
     overflow: hidden;
     border-radius: 3px;
 }
-
 
 .galleriesThumb>div>img {
     max-width: 100% !important;
@@ -173,7 +171,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 7px;
 }
 
 /* Track */
